# jalyoddhe

./: .gitignore  README.md
backend/: .gitignore  README.md  app.py  modal_inference_script.py  pyproject.toml
backend/db/: conn.py
backend/db/services/: AOIService.py  InferenceService.py  LogService.py  RunService.py
backend/nn_models/classification/: resnet.py
backend/schemas/: models.py  others.py
backend/services/: GDownloader.py  InferencePipeline.py  Model.py  Tiler.py
backend/utils/: const.py  env.py  utils.py
frontend/jalyoddhe/: README.md  index.html  package-lock.json  package.json
frontend/jalyoddhe/src/: App.jsx  index.css
frontend/jalyoddhe/src/components/: ChatAgent.jsx  DebrisCards.jsx  FiltersOverlay.jsx  Footer.jsx  HeroSection.jsx  MapSection.jsx  Navbar.jsx  PrimaryButton.jsx  ScrollToTop.jsx  SecondaryButton.jsx
frontend/jalyoddhe/src/pages/: About.jsx  AdminDashboard.jsx  AdminLogin.jsx  Home.jsx
frontend/jalyoddhe/src/utils/: api.js  envs.js
models/multilabel_classification/: dataloader.py  evaluation.py  requirements.txt  resnet.py  train.py
models/semantic_segmentation/: dataloader.py  evaluation.py  train.py  unet.py
utils/: assets.py  metrics.py
